# ACPIA

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.acpia/: case-demo.events.json  case-imgtest.events.json  case-riverside.events.json  case-riverside2.events.json  case-tl.events.json  case-visiontest.events.json
acpia/: agent.py  chat_parser.py  cli.py  correlate.py  dates.py  events_store.py  exif.py  extractors.py  profile.py  summarize.py  supermemory_client.py  timeline.py  tools.py  vision.py
evals/: answer_key.json  run.py
evals/fixtures/case-lakeside/: chat_lakeside.txt  parent_tip.txt
evals/fixtures/case-parkview/: incident_note.txt
