[project]
name = "acpia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "dateparser>=1.4.1",
    "openai>=2.44.0",
    "piexif>=1.1.3",
    "pillow>=12.3.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
acpia = "acpia.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
